Bug 1685436 - Disable VAAPI decoder in RDD process. r=stransky

Disable for now until bug 1683808 is properly fixed.

Differential Revision: https://phabricator.services.mozilla.com/D100991